2008-09-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/aclibobj.test: Fix race condition.

2008-09-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid Heisenbug with verbose testing on HP-UX.
	* tests/output-order.test: Remove spurious redirection line
	from output for comparison.

2008-08-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Copyright year updates.
	* lib/am/header-vars.am: Update copyright years.
	* lib/am/tags.am: Likewise.

	* THANKS: Use Cyrillic name instead of ASCII transcription.

	Fix rebuilding of removed subdir/Makefile.in files.
	* lib/am/configure.am (%MAKEFILE-IN%) [?!TOPDIR_P?]: If
	subdir/Makefile.in was removed, am--refresh would not update
	it.  Fix up for it by running the per-directory rebuild rule.
	* tests/remake6.test, tests/remake7.test: New tests.
	* tests/Makefile.am: Adjust.
	* NEWS, THANKS: Update.
	Report and initial patch by Ilya N. Golubev.

2008-08-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix maintainer-check failure.
	* tests/missing6.test: Use 'rm -f'.

2008-08-19  Reuben Thomas <rrt@sc3d.org>  (tiny patch)

	* doc/automake.texi (Flag Variables Ordering, Per-Object Flags):
	Fix grammaros.

2008-08-02  Karl Berry  <karl@freefriends.org>

	* lib/gnupload: Provide also a simple example.

2008-06-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Small doc fix.
	* doc/automake.texi (Public Macros): Close open paren.

2008-06-18  Rafael Espindola  <espindola@google.com>

	* config-ml.in: don't handle --enable-shared and --enable-static.

2008-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Extending): Fix ambivalent wording.
	Report by Ben Pfaff.

2008-06-04  Karl Berry  <karl@freefriends.org>

	* doc/automake.texi (Install, Hard-Coded Install Paths):  Fix
	punctuation and markup.
	(Extending): Improve wording and clarify order semantics of
	*-local and *-hook targets.

2008-06-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Extending): Fix grammar.
	Report by Karl Berry.
