@@ -5855,7 +5855,7 @@ sub cond_stack_endif ($$$)
 # &define_pretty_variable ($VAR, $COND, $WHERE, @VALUE)
 # -----------------------------------------------------
 # Like define_variable, but the value is a list, and the variable may
-# be defined conditionally.  The second argument is the Condition
+# be defined conditionally.  The second argument is the condition
 # under which the value should be defined; this should be the empty
 # string to define the variable unconditionally.  The third argument
 # is a list holding the values to use for the variable.  The value is
@@ -6961,7 +6961,7 @@ sub am_install_var
       # Use the location of the currently processed variable as context.
       $where->push_context ("while processing `$one_name'");
 
-      # The variable containing all file to distribute.
+      # The variable containing all files to distribute.
       my $distvar = "\$($one_name)";
       $distvar = shadow_unconditionally ($one_name, $where)
 	if ($dist_p && $one_var->has_conditional_contents);
